# sman

./: .gitignore  README.md  pyproject.toml
cockpit-sman/: index.html  manifest.json  sman.css  sman.js
config/: sman.toml.example
src/sman/: __init__.py  config.py
src/sman/agent/: agent.py  prompts.py  router.py  tools.py
src/sman/alerts/: dispatcher.py
src/sman/cli/: main.py
src/sman/daemon/: server.py
src/sman/monitor/: disk.py  journal.py  manager.py  services.py  ssh.py
src/sman/tools/: diagnostics.py  files.py  firewall.py  network.py  packages.py  runner.py  systemctl.py  users.py
src/sman/web/: app.py
src/sman/web/static/: style.css
src/sman/web/templates/: alerts.html  base.html  dashboard.html
src/sman/web/templates/partials/: alert_list.html  dashboard_content.html
systemd/: smand.service
